# MeroPools

./: .gitignore  README.md
app/: .env.example  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
app/src/abis/: DarkPoolSettlement.json
app/src/api/: clientApi.ts  nodeApi.ts
app/src/api/datasource/: ClientApiDataSource.ts  NodeApiDataSource.ts
app/src/app/: global-error.tsx  globals.css  page.tsx
app/src/app/dashboard/: page.tsx
app/src/components/: ErrorReporter.tsx  Link.tsx
app/src/components/dashboard/: AdminPoolDashboard.tsx  ConnectModal.tsx  DashboardNav.tsx  OrderHistoryTab.tsx  PoolsTab.tsx  TradeTab.tsx
app/src/components/landing/: CTASection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  HowItWorks.tsx  KeyFeatures.tsx  WhySection.tsx
app/src/components/ui/: ComponentSeparator.tsx  toast.tsx
app/src/hooks/: useDarkPoolContract.ts  useDefaultContext.ts
app/src/pages/: DashboardPage.tsx  LandingPage.tsx
app/src/providers/: Providers.tsx
app/src/services/: DefaultContextService.ts
app/src/utils/: orderCommitment.ts
contracts/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json
contracts/contracts/: DarkPoolSettlement.sol
contracts/ignition/modules/: DarkPoolSettlement.ts
contracts/scripts/: check-accounts.ts  deploy-darkpool.ts
logic/: Cargo.toml
logic/res/: mero_pools.wasm
logic/src/: lib.rs  types.rs
