[package]
name = "mero_pools"
description = "Calimero MeroPools application"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
calimero-sdk = { git = "https://github.com/calimero-network/core", branch = "master" }
calimero-storage = { git = "https://github.com/calimero-network/core", branch = "master" }
base64 = "0.22.1"
borsh = "0.10.3"
borsh-derive = "0.10.3"
bs58 = "0.5.1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
